...
                    android:id="@+id/event_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label" />

                <EditText
                    android:id="@+id/new_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/schedule_event_padding" />
...
                    android:id="@+id/event_location_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label" />

                <EditText
                    android:id="@+id/new_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/location_hint"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/schedule_event_padding" />
...
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                    <TimePicker
                        android:id="@+id/start_timepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:timePickerMode="spinner" />

                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                    <TimePicker
                        android:id="@+id/end_timepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:timePickerMode="spinner" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            style="@style/activity_bottom_button" />

    </LinearLayout>
...
