...
        android:textColor="@color/color_white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:theme="@style/header_text" />

    <Button
        android:id="@+id/view_schedule_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_accent"
        android:text="@string/schedule_label"
        android:theme="@style/time_label_text"
        android:layout_margin="@dimen/button_margin"/>

    <Button
        android:id="@+id/view_events_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_accent"
        android:text="@string/events_header_label"
        android:theme="@style/time_label_text"
        android:layout_margin="@dimen/button_margin"/>

    <Button
        android:id="@+id/view_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/color_accent"
        android:text="@string/user_profile_label"
        android:theme="@style/time_label_text" />
...
